--- a/public/index.html
+++ b/public/index.html
@@ -32,15 +32,36 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <form id="form">
+			<label for="todo"></label>
+			<input type="text" id="todo" name="todo" />
+			<button type="submit">Submit</button>
+		</form>
+		<script>
+			/* document.querySelector("#form").addEventListener("submit", function (e) {
+            e.preventDefault()
+            const todo = document.querySelector('#todo').value;
+            localStorage.setItem('todos', todo)
+        });
+ */
+			document.querySelector('#form').addEventListener('submit', function (e) {
+				e.preventDefault();
+				const todoInput = document.querySelector('#todo');
+				let existingTodos = localStorage.getItem('todos');
+				let todos;
+				if (existingTodos) {
+					todos = JSON.parse(existingTodos);
+				} else {
+					todos = [];
+				}
+				const todo = {
+					id: Math.floor(Math.random() * 100) + 1,
+					name: todoInput.value,
+				};
+				todos.push(todo);
+				localStorage.setItem('todos', JSON.stringify(todos));
+				todoInput = '';
+			});
+		</script>
   </body>
 </html>
